[package]
name = "gyoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot= "0.12"
pretty_env_logger= "0.4"
log={version = "0.4",features = ["std"]} #,"release_max_level_info"]}

[dev-dependencies]
criterion={version="0.3",features = ["html_reports"]}

[[bench]]
name="spsc"
harness=false
